<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:context=".View.Activity.reservation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/appbarleft"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            android:hint="@string/fullname"
            android:textSize="@dimen/_12ssp"

            android:textColorHint="@android:color/white"
            android:paddingRight="@dimen/_5sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:hint="@string/phonenum"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@android:color/white"
            android:paddingRight="@dimen/_5sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:hint="@string/email"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@android:color/white"
            android:paddingRight="@dimen/_5sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/address"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:paddingRight="@dimen/_5sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:hint="@string/city"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@android:color/white"
            android:paddingRight="@dimen/_5sdp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/rectangle"
                android:layout_marginTop="@dimen/_5sdp"
                android:prompt="@string/peoplenum"
                android:id="@+id/peoplenum"
                android:textSize="@dimen/_12ssp"
                android:textColorHint="@android:color/white"
                android:paddingRight="@dimen/_5sdp"/>
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignTop="@+id/country"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:srcCompat="@drawable/ic_expand_more_white_24dp"
                tools:ignore="RtlCompat" />
        </RelativeLayout>
        <Button
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:textColor="#ffffff"
            android:background="@drawable/rectanglebutton"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="تاكيد الحجز"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        >

        <include
            layout="@layout/navigation"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="match_parent" /></LinearLayout>
</android.support.v4.widget.DrawerLayout>