<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:context=".View.Activity.signup">
    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/scrollView"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/appbarleft"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:textSize="@dimen/_20ssp"
                    android:textColor="#0284AE"
                    android:gravity="center"
                    android:text="@string/signup"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rectangle"
                    android:hint="@string/fullname"
                    android:id="@+id/fullname"
                    android:paddingRight="@dimen/_5sdp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/_12ssp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/rectangle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/email"
                    android:textColor="@android:color/white"
                    android:hint="@string/email"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@android:color/white"
                    android:paddingRight="@dimen/_5sdp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/rectangle"
                    android:id="@+id/mobile"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/phone"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:paddingRight="@dimen/_5sdp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/rectangle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/password"
                    android:textColor="@android:color/white"
                    android:hint="@string/password"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@android:color/white"
                    android:paddingRight="@dimen/_5sdp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/rectangle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/repasswprd"
                    android:textColor="@android:color/white"
                    android:hint="@string/repassword"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@android:color/white"
                    android:paddingRight="@dimen/_5sdp"/>

                <Button
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_13ssp"
                    android:id="@+id/send"
                    android:background="@drawable/rectanglebutton"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/signupal"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:id="@+id/login"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="دخول؟"
                android:gravity="center"/>
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:background="@android:color/black"
                android:layout_gravity="center"
                android:layout_height="@dimen/_1sdp" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.v4.widget.DrawerLayout>