<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include layout="@layout/topbarright"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable ="true"
        android:focusableInTouchMode ="true"
        android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="@dimen/_2sdp"
    android:background="#e2e0e0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/indicator"
            android:layout_marginBottom="4dp">
        </android.support.v4.view.ViewPager>

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/_3sdp"
            app:ci_drawable="@drawable/selected"
            app:ci_drawable_unselected="@drawable/round"
            app:ci_height="@dimen/_6sdp"
            app:ci_margin="@dimen/_5sdp"
            app:ci_width="@dimen/_6sdp" />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cardUseCompatPadding="true"
        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:id="@+id/gotosamaTrips"
             android:weightSum="1">

             <ImageView
                 android:layout_weight=".1"
                 android:layout_width="0dp"
                 android:src="@drawable/leftarrow"
                 android:layout_gravity="center"
                 android:layout_height="@dimen/_15sdp" />
             <TextView
                 android:layout_weight=".9"
                 android:layout_width="0dp"
                 android:text="@string/reserve"
                 android:textColor="@color/blue"
                 android:textStyle="bold"
                 android:paddingRight="@dimen/_10sdp"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="@dimen/_10sdp"
                 android:gravity="center_vertical"
                 android:layout_height="match_parent" />
         </LinearLayout>
           </android.support.v7.widget.CardView>
    </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="@dimen/_80sdp">
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:layout_gravity="center"
                android:layoutDirection="rtl"
                android:id="@+id/barlist">
            </android.support.v7.widget.RecyclerView>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wallet_holo_blue_light"
                android:text="@string/promotaionADS"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/promote"
                android:textSize="@dimen/_13ssp"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/promotelist"
            android:layout_marginTop="@dimen/_5sdp">
        </android.support.v7.widget.RecyclerView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wallet_holo_blue_light"
                android:text="@string/nearby"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/nearest"
                android:textSize="@dimen/_13ssp"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nearestlist"
            android:layout_marginTop="@dimen/_5sdp">
        </android.support.v7.widget.RecyclerView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wallet_holo_blue_light"
                android:text="@string/mostRated"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/hightrated"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mostratedlist"
            android:layout_marginTop="@dimen/_5sdp">
        </android.support.v7.widget.RecyclerView>
</LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        >
        <include
            layout="@layout/navigation"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>